Elastic: Fix border radius in popovers on small screens (#6911)

--- a/skins/elastic/styles/widgets/dialogs.less
+++ b/skins/elastic/styles/widgets/dialogs.less
@@ -55,13 +55,15 @@
         display: none;
     }
 
-    .listing {
-        li:first-child {
-            border-radius: .25rem .25rem 0 0;
-        }
+    @media screen and (min-width: (@screen-width-small + 1px)) {
+        .listing {
+            li:first-child {
+                border-radius: .25rem .25rem 0 0;
+            }
 
-        li:last-child {
-            border-radius: 0 0 .25rem .25rem;
+            li:last-child {
+                border-radius: 0 0 .25rem .25rem;
+            }
         }
     }
 }
